# packster

./: .gitignore  LICENSE  Makefile  README.md  demo_llm.py  pyproject.toml
packster/: __init__.py  cli.py  config.py  detect.py  normalize.py  types.py
packster/cloud/: __init__.py  compression.py  gist.py  qr.py  security.py  web_server.py
packster/collect/: __init__.py  apt.py  cargo.py  common.py  gem.py  npm.py  pip_.py
packster/emit/: __init__.py  bootstrap.py  brewfile.py  langs.py  report.py
packster/llm/: __init__.py  claude.py  parser.py  prompts.py
packster/map/: __init__.py  heuristics.py  mapper.py  registry.py
packster/runtime/: bootstrap.sh.j2  report.html.j2
packster/validate/: __init__.py  brew.py
registry/: aliases.yaml  apt-to-brew.yaml
test-command-fix/: bootstrap.sh  report.html  report.json
test-command-fix/lang/: gems.txt
test-script-fix/Brewfile/: Brewfile
test-script-fix/lang/: requirements.txt
tests/: conftest.py  test.yaml  test_cli.py  test_cli_cloud.py  test_cloud.py  test_collect.py  test_detect.py  test_emit.py  test_integration.py  test_llm.py  test_map.py  test_validate.py
